[package]
name = "cirith-ungol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.5", features = ["matched-path", "original-uri"] }
axum-server = { version = "^0.4", features = ["tls-rustls"] }
drop-root = "^0.1"
httparse = "^1.8"
hyper = "^0.14"
log = "^0.4"
once_cell = "^1.15"
serde = { version = "^1.0", features = ["derive"] }
simplelog = "^0.12"
tokio = { version = "^1.2", features = ["fs", "io-util", "macros", "process", "rt", "time"] }
tokio-util = { version = "^0.7", features = ["io"] }
toml = "^0.5"