[package]
name = "cirith-ungol"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop-root = "^0.1"
futures-util = "^0.3"
http = "^0.2"
httparse = "^1.8"
hyper = { version = "^0.14", features = ["http1", "http2", "server", "stream", "tcp"] }
libc = "^0.2"
log = "^0.4"
once_cell = "^1.15"
pin-project = "^1.0"
rustls-pemfile = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
simplelog = "^0.12"
smallvec = { version = "^1.10", features = ["write"] }
time = { version = "^0.3", features = ["formatting", "macros", "parsing"] }
tls-listener = { version = "^0.5", features = ["hyper-h1", "hyper-h2", "rustls"] }
tokio-rustls = "^0.23"
tokio = { version = "^1.2", features = ["fs", "macros", "net", "process", "rt"] }
#tokio-util = { version = "^0.7", features = ["io"] }
toml = "^0.5"
tower = { version = "^0.4", features = ["make", "util"] }
tower-http = { version = "^0.3", features = ["add-extension", "cors", "set-header"] }
urlencoding = "^2.1"